fourth edition + typo fixed

--- a/Includes/introduction.tex
+++ b/Includes/introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-The formation of carbonaceous nanoparticles such as soot and Carbon Black (CB) is a complex and multi-scale process that involves chemical reactions, heat transfer, fluid and particle dynamics and spans over wide length ($\sim$ $10^{-12}$ to 1 m) and time ($\sim$$10^{-15}$ to 1 s) scales. Fig.~\ref{fig:sootscales} demonstrates the length and time scales relevant to different stages of soot formation from PAH precursors to incipient, nascent and mature soot in flames. Understanding the effect of process parameters on particle concentration, morphology, and composition is not trivial, but crucial due to health and environmental impacts of soot and functional properties of CB.
+The formation of carbonaceous nanoparticles such as soot and Carbon Black (CB) is a complex and multi-scale process that involves chemical reactions, heat transfer, fluid and particle dynamics and spans over wide length ($\sim$ $10^{-12}$ to 1 m) and time ($\sim$$10^{-15}$ to 1 s) scales. Figure~\ref{fig:sootscales} demonstrates the length and time scales relevant to different stages of soot formation from PAH precursors to incipient, nascent and mature soot in flames. Understanding the effect of process parameters on particle concentration, morphology, and composition is not trivial, but crucial due to health and environmental impacts of soot and functional properties of CB.
 %Soot particle are broad-band light absorbers~\cite{d2009combustion}, and are emitted in large scales ($\approx$9.5 megatons of soot) acting as the third strongest contributor to climate change after methane and carbon dioxide~\citep{myhre2014anthropogenic}. Because of their small size (classified as $\mathrm{PM_{2.5}}$), soot particles can deposit on lung tissues and penetrate other organs through the bloodstream~\citep{borm2004inhaled} and cause asthma~\citep{niranjan2017toxicological} and heart disease~\citep{nichols2013systematic}. On the other hand, CB is the largest flame-made nanomaterial by production value and volume ($\sim$15 megatons per year with a worth of \$17B) extensively used as a reinforcing agent in rubber and tire industries~\citep{international2016carbon}, and conductive additive in lithium-ion batteries~\citep{Palomares2010}. 
 Soot is a broad-band light absorber~\cite{d2009combustion}, and is emitted in large scales ($\approx$9.5 megatons) acting as the third strongest contributor to climate change after methane and carbon dioxide~\citep{myhre2014anthropogenic}. Its fine particulate nature ($\mathrm{PM_{2.5}}$) also raises health concerns~\citep{borm2004inhaled}. In contrast, CB, the largest flame-made nanomaterial by production volume ($\sim$15 megatons annually), plays a critical role in industrial applications, including rubber reinforcement~\citep{international2016carbon} and lithium-ion battery technologies~\citep{Palomares2010}.
 
