--- a/Includes/nomenclature.tex
+++ b/Includes/nomenclature.tex
@@ -15,19 +15,19 @@
 \nomenclature[e]{$C_{tot}$}{Total carbon content of soot particles (per section)\nomunit{\si{mol\per\kg}}}
 \nomenclature[e]{$H_{tot}$}{Total hydrogen content of soot particles (per section)\nomunit{\si{mol\per\kg}}}
 
-\nomenclature[e]{$E(m)$}{Absorption function of soot\nomunit{-}}
+\nomenclature[e]{$E(m)$}{Absorption function of soot\nomunit{\si{-}}}
 
 \nomenclature[e]{$T$}{Temperature\nomunit{K}}
 \nomenclature[e]{$I$}{Source terms for soot variables\nomunit{\si{\mol\per\kilogram\per\second}}}
-\nomenclature[e]{$d$}{diameter\nomunit{m}}
-\nomenclature[e]{$m$}{mass\nomunit{\si{\kilogram}}}
-\nomenclature[e]{$MW$}{Molecular weight\nomunit{kg}}
+\nomenclature[e]{$d$}{Diameter\nomunit{m}}
+\nomenclature[e]{$m$}{Mass\nomunit{\si{\kilogram}}}
+\nomenclature[e]{$W$}{Molecular weight\nomunit{kg/mol}}
 \nomenclature[e]{$n_p$}{Number of primary particles of per agglomerate}
 \nomenclature[e]{$d_p$}{Primary particle diameter \nomunit{\si{\metre}}}
 \nomenclature[e]{$d_m$}{Mobility diameter \nomunit{\si{\metre}}}
 \nomenclature[e]{$d_g$}{Gyration diameter \nomunit{\si{\metre}}}
 \nomenclature[e]{$d_c$}{Collision diameter \nomunit{\si{\metre}}}
-\nomenclature[e]{$k$}{reaction rate constant \nomunit{\si{\meter\cubed\per\mol\per\second}}}
+\nomenclature[e]{$k$}{Reaction rate constant \nomunit{\si{\meter\cubed\per\mol\per\second}}}
 \nomenclature[e]{$D$}{Diffusion coefficient of particles \nomunit{\si{\meter\squared\per\second}}}
 \nomenclature[e]{$SF$}{Sectional spacing factor \nomunit{\si{-}}}
 %\nomenclature[g]{$\beta$}{Collision frequency\nomunit{\metre}}
@@ -58,9 +58,9 @@
 \nomenclature[u]{ox}{Oxidation}
 \nomenclature[u]{coag}{Coagulation}
 \nomenclature[u]{ads}{Adsorption}
-\nomenclature[u]{f}{forward}
-\nomenclature[u]{r}{reverse}
-\nomenclature[u]{reac}{reactive}
+\nomenclature[u]{f}{Forward}
+\nomenclature[u]{r}{Reverse}
+\nomenclature[u]{reac}{Reactive}
 
 %\nomenclature[s]{t}{top}
 
