applying some of the Reza's comments on introduction

--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -1,3 +1,35 @@
+@article{rosner2024techno,
+	title={Techno-economic and carbon dioxide emission assessment of carbon black production},
+	author={Rosner, Fabian and Bhagde, Trisha and Slaughter, Daniel S and Zorba, Vassilia and Stokes-Draut, Jennifer},
+	journal={Journal of Cleaner Production},
+	volume={436},
+	pages={140224},
+	year={2024},
+	publisher={Elsevier}
+}
+
+@article{park2004novel,
+	title={A novel fixed-sectional model for the formation and growth of aerosol agglomerates},
+	author={Park, SH and Rogak, SN},
+	journal={Journal of Aerosol Science},
+	volume={35},
+	number={11},
+	pages={1385--1404},
+	year={2004},
+	publisher={Elsevier}
+}
+
+@article{gelbard1980sectional,
+	title={Sectional representations for simulating aerosol dynamics},
+	author={Gelbard, Fred and Tambour, Yoram and Seinfeld, John H},
+	journal={Journal of colloid and interface science},
+	volume={76},
+	number={2},
+	pages={541--556},
+	year={1980},
+	publisher={Elsevier}
+}
+
 @misc{fuchs1965mechanics,
   title={The mechanics of aerosols},
   author={Fuchs, Nikolaj A and Daisley, RE and Fuchs, Marina and Davies, CN and Straumanis, ME},
