--- a/Includes/submissionguide.tex
+++ b/Includes/submissionguide.tex
@@ -7,12 +7,12 @@
 \end{itemize}
 
 \vspace{1cm}
-\textbf{\large{List of potential journals}}
+\textbf{\large{List of potential reviewers}}
 \vspace{0.3cm}
 
 \begin{itemize}
 	\item Dr. José Moran, Assistant professor at University of Ottawa, jose.moran@uottawa.ca
 	\item Dr. Seth Dworkin, Professor at Toronto Metropolitan University, seth.dworkin@torontomu.ca
-	\item Dr. Chiara Saggese, Researcher at Lawrence Livermore National Laboratory
-	\item Dr. William Roberts, Professor at King Abdullah University of Science and Technology  , william.roberts@kaust.edu.sa
+	\item Dr. Chiara Saggese, Researcher at Lawrence Livermore National Laboratory, saggese1@llnl.gov
+	\item Dr. William Roberts, Professor at King Abdullah University of Science and Technology, william.roberts@kaust.edu.sa
 \end{itemize}
