--- a/Includes/theory.tex
+++ b/Includes/theory.tex
@@ -393,7 +393,7 @@ Incipient soot is initially a sphere formed of PAHs with constant density that g
 Mobility and gyration diameters are calculated using power-laws developed to describe the morphology of soot from premixed~\citep{abid2008evolution}, diffusion~\citep{yon2015simple} flames, and diesel engines~\citep{rissler2013effective}. Figure~\ref{fig:Morphology} illustrates the schematics of a soot agglomerates with 12 primary particles and depicted ${d_p}$, ${d_m}$, and ${d_g}$.  
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[height=60mm, ]{Figures/Morphology.pdf}
+	\includegraphics[height=60mm, ]{Figures/Theory/Morphology.pdf}
 	\caption{The schematics of a soot agglomerates with 12 primary particles (${n_p=12}$). Primary particle, ${d_p}$, mobility ${d_m}$, and gyration ${d_g}$, diameters are shown.}
 	\label{fig:Morphology}
 \end{figure} 
